582864 upgrade to spring 6.1.2, logback 1.5.3, felix 6.0.0 (osgi 7)