@@ -32,9 +32,10 @@ import org.osgi.framework.ServiceRegistration;
  * {@link Constants#SERVICE_RANKING}.
  * 
  * @author Costin Leau
+ * @param <S>
  * 
  */
-public class MockServiceReference implements ServiceReference {
+public class MockServiceReference<S> implements ServiceReference<S> {
 
 	private Bundle bundle;
 
@@ -94,7 +95,7 @@ public class MockServiceReference implements ServiceReference {
 	 * 
 	 * @param registration service registration
 	 */
-	public MockServiceReference(ServiceRegistration registration) {
+	public MockServiceReference(ServiceRegistration<S> registration) {
 		this(null, null, registration);
 	}
 
@@ -107,7 +108,7 @@ public class MockServiceReference implements ServiceReference {
 	 * @param properties reference properties
 	 * @param registration associated service registrations
 	 */
-	public MockServiceReference(Bundle bundle, Dictionary properties, ServiceRegistration registration) {
+	public MockServiceReference(Bundle bundle, Dictionary properties, ServiceRegistration<S> registration) {
 		this(bundle, properties, registration, null);
 	}
 
@@ -144,7 +145,7 @@ public class MockServiceReference implements ServiceReference {
 
 		Object ranking = dict.get(Constants.SERVICE_RANKING);
 		if (ranking == null || !(ranking instanceof Integer))
-			dict.put(Constants.SERVICE_RANKING, new Integer(0));
+			dict.put(Constants.SERVICE_RANKING, Integer.valueOf(0));
 
 		serviceId = ((Long) dict.get(Constants.SERVICE_ID)).longValue();
 	}
@@ -243,5 +244,10 @@ public class MockServiceReference implements ServiceReference {
 		}
 
 		return result;
+	}
+
+	@Override
+	public Dictionary<String, Object> getProperties() {
+		return properties;
 	}
 }
